# botsfile-for-virtmas

./: main.py
ag15Bot/: VM_kode.txt  adv_bot.py  vm_key  vm_key.pub
ag15Bot/asd/: pyproject.toml
